--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "electron-packager": "^17.1.1"
   },
   "dependencies": {
-    "ffmpeg-static": "^4.4.0",
-    "yt-dlp": "^2024.01.01"
+    "ffmpeg-static": "^4.4.0"
   }
 }
